--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelpMeHere">
-        <activity android:name=".About"
+        <activity android:name=".Orientacoes"
             android:launchMode="singleTask"/>
         <activity android:name=".SaibaMais"
             android:launchMode="singleTask"/>
-        <activity android:name=".Dashboard"
+        <activity android:name=".Cadastro"
             android:launchMode="singleTask"/>
         <activity android:name=".MainActivity"
             android:launchMode="singleTask">
